--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -867,5 +867,20 @@
     "Confirmar":"Confirmar",
     "Pesquisar no Banco de Dados":"Pesquisar no Banco de Dados",
     "Informações":"Informações",
-    "Info":"Info"
+    "Info":"Info",
+    "Escalas x Brigadistas": "Escalas x Brigadistas",
+    "Qtd Brig/Ala": "Qtd Brig/Ala",
+    "Posto": "Posto",
+    "Hr Iní. Ala 1": "Hr Iní. Ala 1",
+    "ESCALA": "ESCALA",
+    "BRIGADISTAS": "BRIGADISTAS",
+    "Brigadistas": "Brigadistas",
+    "ALA": "ALA",
+    "Escalas Geradas": "Escalas Geradas",
+    "Escala Modelo": "Escala Modelo",
+    "Data Término": "Data Término",
+    "ESCALA TIPO": "ESCALA TIPO",
+    "POSTO": "POSTO",
+    "DATA INÍCIO": "DATA INÍCIO",
+    "DATA TÉRMINO": "DATA TÉRMINO"
 }
