--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -960,5 +960,25 @@
     "NÃO": "NO",
     "Dados Contratuais": "Contractual Data",
     "Documentos": "Documents",
-    "Endereço": "Address"
+    "Endereço": "Address",
+    "Situações": "Situations",
+    "Contratações": "Hirings",
+    "TEMPORÁRIO": "TEMPORARY",
+    "APOIO": "SUPPORT",
+    "BOMBEIRO CIVIL": "FIREFIGHTER",
+    "CORDENADOR": "COORDINATOR",
+    "Supervisor": "Supervisor",
+    "FEMININO": "FEMALE",
+    "MASCULINO": "MALE",
+    "Ativo": "Active",
+    "Tipos": "Types",
+    "Pessoa Jurídica": "Legal Entity",
+    "Pessoa Física": "Individual",
+    "Contato Emergencial": "Emergency Contact",
+    "Ícone": "Icon",
+    "Localização": "Location",
+    "Latitude": "Latitude",
+    "Longitude": "Longitude",
+    "Ícones": "Icons",
+    "Natureza": "Nature"
 }
