--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -961,5 +961,25 @@
     "NÃO": "NÃO",
     "Dados Contratuais": "Dados Contratuais",
     "Documentos": "Documentos",
-    "Endereço": "Endereço"
+    "Endereço": "Endereço",
+    "Situações": "Situações",
+    "Contratações": "Contratações",
+    "TEMPORÁRIO": "TEMPORÁRIO",
+    "APOIO": "APOIO",
+    "BOMBEIRO CIVIL": "BOMBEIRO CIVIL",
+    "CORDENADOR": "CORDENADOR",
+    "Supervisor": "Supervisor",
+    "FEMININO": "FEMININO",
+    "MASCULINO": "MASCULINO",
+    "Ativo": "Ativo",
+    "Tipos": "Tipos",
+    "Pessoa Jurídica": "Pessoa Jurídica",
+    "Pessoa Física": "Pessoa Física",
+    "Contato Emergencial": "Contato Emergencial",
+    "Ícone": "Ícone",
+    "Localização": "Localização",
+    "Latitude": "Latitude",
+    "Longitude": "Longitude",
+    "Ícones": "Ícones",
+    "Natureza": "Natureza"
 }
